tests/vrs/interface/parts/layout_00_missing_separator_expected.txt
error: expected `}`, found `1`
     --> tests/vrs/interface/parts/layout_00_missing_separator.vrs:3:5
      |
    3 |      1 .. 2 bar
      |      ^ help: add `}` here.
